# discord-javascript-injector

./: Cargo.toml  LICENSE  README.md  build.rs
src/: asar.rs  check_installation.rs  constants.rs  eject.rs  inject.rs  lib.rs  targets.rs  util.rs
src/windows/: process.cpp
