[package]
name = "discord_injector-lib"
version = "0.1.4"
edition = "2021"
authors = ["klover-rs"]
description = "This is a rust library which allows you to inject javascript into the discord desktop client!"
license = "MIT"
repository = "https://github.com/klover-rs/discord-javascript-injector"
readme = "README.md"
keywords = ["discord", "injector", "electron", "asar", "javascript"]

[dependencies]
serde_json = "1"
asar = "0.3.0"
walkdir = "2.5.0"
dirs = "5.0.1"
anyhow = "1.0.86"
serde = { version = "1.0.204", features = ["derive"] }
rayon = "1.10.0"
url = "2.5.2"
tokio-tungstenite = "0.16"
tungstenite = "0.17"
futures-util = "0.3.30"
tokio = { version = "1.39.2", features = ["full"] }
swc_ecma_ast = "0.118.0"
swc_common = "0.37.0"
swc_ecma_codegen = "0.155.0"
swc_ecma_parser = "0.149.0"
swc_ecma_transforms_typescript = "0.195.1"
swc_ecma_visit = "0.104.2"


[build-dependencies]
cc = "1.1.7"